EXTRA_DIST=mzrrulestoxmlconverter.py \
setup.py \
moleculizer/Exceptions.py \
moleculizer/expressionevaluation.py \
moleculizer/__init__.py \
moleculizer/sectiondimerrules.py \
moleculizer/moleculizerrules.py \
moleculizer/moleculizer_xcpt.py \
moleculizer/parsedassignment.py \
moleculizer/parsedbindingsite.py \
moleculizer/parsedcomplex.py \
moleculizer/parsedline.py \
moleculizer/parsedmodificationsite.py \
moleculizer/parsedmol.py \
moleculizer/parsedmzrtoken.py \
moleculizer/parsedrxnrule.py \
moleculizer/parsed_xcpt.py \
moleculizer/xmlobject.py \
moleculizer/sectionallostery.py \
moleculizer/sectionexplicitspeciesblock.py \
moleculizer/sectionmodifications.py \
moleculizer/sectionmols.py \
moleculizer/sectionmzr.py \
moleculizer/sectionparameter.py \
moleculizer/sectionreactionrules.py \
moleculizer/sectionspeciesstreams.py \
moleculizer/section_xcpt.py \
moleculizer/util.py 


install-exec-local:
	python setup.py install